--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,13 @@
     "description": "Ergonode - Reader",
     "homepage": "https://ergonode.com",
     "license": "OSL-3.0",
+    "config": {
+        "bin-dir": "bin",
+        "preferred-install": {
+            "*": "dist"
+        },
+        "sort-packages": true
+    },
     "require": {
         "php": "^7.2",
         "doctrine/dbal": "^2.9",
@@ -21,9 +28,17 @@
         "symfony/translation": "^4.3",
         "symfony/validator": "^4.3"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^7"
+    },
     "autoload": {
         "psr-4": {
             "Ergonode\\Reader\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Ergonode\\Reader\\Tests\\": "tests/"
         }
     }
 }
